--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "flowbite": "^2.3.0",
     "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
